<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>user</artifactId>
  <dependencies>
    <dependency>
      <artifactId>junit</artifactId>
      <groupId>junit</groupId>
      <scope>test</scope>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-config -->
    <dependency>
      <artifactId>spring-security-config</artifactId>
      <groupId>org.springframework.security</groupId>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-web -->
    <dependency>
      <artifactId>spring-security-web</artifactId>
      <groupId>org.springframework.security</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-security-oauth2-client</artifactId>
      <groupId>org.springframework.security</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-security-test</artifactId>
      <groupId>org.springframework.security</groupId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <groupId>com.jobseecker.user</groupId>
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <artifactId>quizstudio</artifactId>
    <groupId>com.jobseecker</groupId>
    <version>0.0.1-SNAPSHOT</version>
  </parent>
  <properties>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>


</project>
